--- a/src/lib/x86_64-linux/unit1.lfm
+++ b/src/lib/x86_64-linux/unit1.lfm
@@ -1,12 +1,13 @@
 object Form1: TForm1
   Left = 248
   Height = 240
-  Top = 125
+  Top = 153
   Width = 320
   BorderStyle = bsSingle
   Caption = 'MOVEME'
   ClientHeight = 240
   ClientWidth = 320
+  OnCreate = FormCreate
   LCLVersion = '1.8.2.0'
   object img: TImage
     Left = 0
@@ -508,6 +509,7 @@ object Form1: TForm1
     Font.Height = -8
     Font.Name = 'Sans'
     OnClick = mvUpClick
+    OnExit = mvUpExit
     ParentFont = False
     TabOrder = 0
   end
